--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Title of the document</title>
+  </head>
+
+  <body>
+    
+    <div id="map">
+      <table>
+        <tbody>
+          <tr>
+            <td>
+              <div id="test" class="hoverable"></div>
+            </td>
+            <td>
+              <div id="test-pond" class="spacer"></div>
+            </td>
+            <td>
+              <div id="pond" class="hoverable"></div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+
+    
+  </body>
+
+</html>
 
