--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE html>
+
+<link rel="stylesheet" type="text/css" href="styles.css" media="screen" />
+
 <html>
   <head>
     <title>Title of the document</title>
