--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <html>
   <head>
-    <title>Title of the document</title>
+    <title>Pleasant Acres Interactive Map</title>
   </head>
 
   <body>
