--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="map">
       <table>
         <tbody>
-          <tr>
+          <tr class="map-row">
             <td>
               <div id="test" class="hoverable"></div>
             </td>
