--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <div id="map">
       <table>
         <tbody>
-          <tr class="map-row">
+          <tr>
             <td>
-              <div id="test" class="hoverable"></div>
+              <div id="test" class="hoverable map-row"></div>
             </td>
             <td>
-              <div id="test-pond" class="spacer"></div>
+              <div id="test-pond" class="spacer map-row"></div>
             </td>
             <td>
-              <div id="pond" class="hoverable"></div>
+              <div id="pond" class="hoverable map-row"></div>
             </td>
           </tr>
         </tbody>
