--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <tbody>
           <tr>
             <td>
-              <div id="test" class="hoverable map-row"></div>
+              <div id="test" class="hoverable"></div>
             </td>
             <td>
-              <div id="test-pond" class="spacer map-row"></div>
+              <div id="test-pond" class="spacer"></div>
             </td>
             <td>
-              <div id="pond" class="hoverable map-row"></div>
+              <div id="pond" class="hoverable"></div>
             </td>
           </tr>
         </tbody>
