Hoverables display on fixed display-frame, double display size (in px)

--- a/index.html
+++ b/index.html
@@ -14,22 +14,28 @@
         <tbody>
           <tr>
             <td>
-              <div id="test" class="hoverable"></div>
+              <div id="test" class="hoverable">
+                <div class="display-frame">
+                  <h1> Welcome to PAC!</h1>
+                </div>
+              </div>
             </td>
             <td>
-              <div id="test-pond" class="spacer"></div>
+              <div id="test-pond" class="spacer">
+              </div>
             </td>
             <td>
-              <div id="pond" class="hoverable"></div>
+              <div id="pond" class="hoverable">
+                <div class="display-frame">
+                  <h1>You'd rather be fishin'!</h1>
+                </div>
+              </div>
             </td>
           </tr>
         </tbody>
       </table>
     </div>
 
-    <div id="display-frame" class="display">
-      
-    </div>
 
 
   </body>
