switch to absolute positioning for hoverables

--- a/index.html
+++ b/index.html
@@ -10,35 +10,22 @@
   <body>
 
     <div id="map">
-      <table>
-        <tbody>
-          <tr>
-            <td>
-              <div id="test" class="hoverable">
+              <div id="test" class="hoverable bordered">
                 <div class="display-frame">
                   <h1> Welcome to PAC!</h1>
                 </div>
               </div>
-            </td>
-            <td>
-              <div id="test-pond" class="spacer">
-              </div>
-            </td>
-            <td>
-              <div id="pond" class="hoverable">
+
+              <div id="pond" class="hoverable bordered">
                 <div class="display-frame">
                   <h1>You'd rather be fishin'!</h1>
                 </div>
               </div>
-            </td>
-          </tr>
-        </tbody>
-      </table>
     </div>
 
   <div id="display-hider" class="display-frame">
   </div>
-    
+
   </body>
 
 </html>
