add visible display window, add site#2, tweak CSS

--- a/index.html
+++ b/index.html
@@ -10,20 +10,28 @@
   <body>
 
     <div id="map">
-              <div id="test" class="hoverable bordered">
+              <div id="welcome" class="hoverable">
                 <div class="display-frame">
                   <h1> Welcome to PAC!</h1>
                 </div>
               </div>
 
-              <div id="pond" class="hoverable bordered">
+              <div id="pond" class="hoverable">
                 <div class="display-frame">
                   <h1>You'd rather be fishin'!</h1>
                 </div>
               </div>
+
+              <div id="site-2" class="hoverable">
+                <div class="display-frame">
+                  <h1>You found site #2!</h1>
+                </div>
+              </div>
+
+
     </div>
 
-  <div id="display-hider" class="display-frame">
+  <div id="display" class="display-frame">
   </div>
 
   </body>
