--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
                 </div>
               </div>
 
+              <div id="hayride" class="hoverable">
+                <div class="display-frame">
+                  <h1>Horsedrawn Hayrides!</h1>
+                </div>
+              </div>
+
 
     </div>
 
