add site#518, stretch site#2 to full column, add clickable links to sites

--- a/index.html
+++ b/index.html
@@ -22,11 +22,17 @@
                 </div>
               </div>
 
-              <div id="site-2" class="hoverable">
+              <a href="http://www.pleasantacres.com/cabin-and-cottage-rentals-rates/" id="site-2" class="hoverable">
                 <div class="display-frame">
-                  <h1>You found site #2!</h1>
+                  <h1>Home away from home!</h1>
                 </div>
-              </div>
+              </a>
+
+              <a href="http://www.pleasantacres.com/cabin-and-cottage-rentals-rates/" id="site-518" class="hoverable">
+                <div class="display-frame">
+                  <h1>Home away from home!</h1>
+                </div>
+              </a>
 
               <div id="hayride" class="hoverable">
                 <div class="display-frame">
