--- a/index.html
+++ b/index.html
@@ -10,41 +10,47 @@
   <body>
 
     <div id="map">
-              <div id="welcome" class="hoverable">
-                <div class="display-frame">
-                  <h1> Welcome to PAC!</h1>
-                </div>
-              </div>
+      <div id="welcome" class="hoverable">
+        <div class="display-frame">
+          <h1> Welcome to PAC!</h1>
+        </div>
+      </div>
 
-              <div id="pond" class="hoverable">
-                <div class="display-frame">
-                  <h1>You'd rather be fishin'!</h1>
-                </div>
-              </div>
+      <div id="pond" class="hoverable">
+        <div class="display-frame">
+          <h1>You'd rather be fishin'!</h1>
+        </div>
+      </div>
 
-              <a href="http://www.pleasantacres.com/cabin-and-cottage-rentals-rates/" id="site-2" class="hoverable">
-                <div class="display-frame">
-                  <h1>Home away from home!</h1>
-                </div>
-              </a>
+      <a href="http://www.pleasantacres.com/cabin-and-cottage-rentals-rates/" id="site-2" class="hoverable">
+        <div class="display-frame">
+          <h1>Home away from home!</h1>
+        </div>
+      </a>
 
-              <a href="http://www.pleasantacres.com/cabin-and-cottage-rentals-rates/" id="site-518" class="hoverable">
-                <div class="display-frame">
-                  <h1>Home away from home!</h1>
-                </div>
-              </a>
+      <a href="http://www.pleasantacres.com/cabin-and-cottage-rentals-rates/" id="site-518" class="hoverable">
+        <div class="display-frame">
+          <h1>Home away from home!</h1>
+        </div>
+      </a>
 
-              <div id="hayride" class="hoverable">
-                <div class="display-frame">
-                  <h1>Horsedrawn Hayrides!</h1>
-                </div>
-              </div>
+      <div id="pool" class="hoverable">
+        <div class="display-frame">
+          <h1>Olympic sized pool!</h1>
+        </div>
+      </div>
+
+      <div id="hayride" class="hoverable">
+        <div class="display-frame">
+          <h1>Horsedrawn Hayrides!</h1>
+        </div>
+      </div>
 
 
     </div>
 
-  <div id="display" class="display-frame">
-  </div>
+    <div id="display" class="display-frame">
+    </div>
 
   </body>
 
