--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
         </div>
       </a>
 
+      <div id="site-60" class="hoverable bordered">
+        <div class="display-frame">
+          <h1>Just enough shade!</h1>
+        </div>
+      </div>
+
       <a href="http://www.pleasantacres.com/cabin-and-cottage-rentals-rates/" id="site-518" class="hoverable">
         <div class="display-frame">
           <h1>Home away from home!</h1>
