remove border from site-60

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
       </a>
 
-      <div id="site-60" class="hoverable bordered">
+      <div id="site-60" class="hoverable">
         <div class="display-frame">
           <h1>Just enough shade!</h1>
         </div>
